--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -19,8 +19,8 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: npm install, build, and test
       run: |
-        npm install
-        npm run build --if-present
-        npm test
+        npm install --prefix admin && npm install --prefix api
+        npm run build --if-present --prefix admin && npm run build --if-present api
+        npm test --prefix admin && npm test --prefix api
       env:
         CI: true
