--- a/admin/package.json
+++ b/admin/package.json
@@ -35,14 +35,12 @@
 		"hogan.js": "^3.0.2",
 		"method-override": "^2.3.10",
 		"moment": "^2.22.2",
-		"morgan": "^1.9.0",
-		"mysql": "^2.16.0",
-		"mysql-validator": "^0.1.6",
+		"morgan": "^1.9.0", 
+		"superagent":"^5.0.1",
 		"pg": "^7.12.1",
 		"pwd": "^1.1.0",
 		"serve-static": "^1.13.2",
-		"slugify": "^1.3.1",
-		"sqlite3": "^4.1.0",
+		"slugify": "^1.3.1", 
 		"sr-pagination": "^1.0.1",
 		"xsql": "^1.0.1"
 	},
