--- a/admin/package.json
+++ b/admin/package.json
@@ -1,24 +1,11 @@
 {
-	"name": "express-admin",
-	"version": "1.4.2",
-	"description": "MySql, MariaDB, SQLite and PostgreSQL database admin built with Express and Bootstrap",
-	"keywords": [
-		"mysql",
-		"mariadb",
-		"sqlite",
-		"postgresql",
-		"database",
-		"admin",
-		"express",
-		"bootstrap"
-	],
+	"name": "alskom-admin",
+	"version": "0.0.1",
+	"description": "",
+	"keywords": [],
 	"license": "MIT",
-	"homepage": "https://github.com/simov/express-admin",
-	"author": "Simeon Velichkov <simeonvelichkov@gmail.com> (https://simov.github.io)",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/simov/express-admin.git"
-	},
+	"homepage": "",
+	"author": "",
 	"dependencies": {
 		"async": "^0.9.2",
 		"body-parser": "^1.18.3",
@@ -35,12 +22,14 @@
 		"hogan.js": "^3.0.2",
 		"method-override": "^2.3.10",
 		"moment": "^2.22.2",
-		"morgan": "^1.9.0", 
-		"superagent":"^5.0.1",
+		"morgan": "^1.9.0",
+		"superagent": "^5.0.1",
 		"pg": "^7.12.1",
+		"mysql": "^2.17.1",
+		"mysql-validator": "^0.1.6",
 		"pwd": "^1.1.0",
 		"serve-static": "^1.13.2",
-		"slugify": "^1.3.1", 
+		"slugify": "^1.3.1",
 		"sr-pagination": "^1.0.1",
 		"xsql": "^1.0.1"
 	},
@@ -55,7 +44,6 @@
 		"admin": "./bin/admin"
 	},
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
 		"start": "node ./bin/admin"
 	}
 }
