--- a/api/ormconfig.json
+++ b/api/ormconfig.json
@@ -3,7 +3,7 @@
   "host": "localhost",
   "port": 5432,
   "username": "postgres",
-  "password": "postgres",
+  "password": "12345",
   "database": "alskom",
   "entities": [
     "dist/**/*.entity.js"
