--- a/api/package.json
+++ b/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "admin-api",
+  "name": "alskom-api",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -7,9 +7,7 @@
   "scripts": {
     "build": "rimraf dist && tsc -p tsconfig.build.json",
     "start": "tsc-watch -p tsconfig.build.json --onSuccess \"node dist/main.js\"",
-    "start:prod": "node dist/main.js",
-    "lint": "tslint -p tsconfig.json -c tslint.json",
-    "test": "jest --config ./test/jest-e2e.json"
+    "start:prod": "node dist/main.js"
   },
   "dependencies": {
     "@nestjs/common": "^6.0.0",
