--- a/admin/package.json
+++ b/admin/package.json
@@ -1,49 +1,51 @@
 {
-	"name": "alskom-admin",
-	"version": "0.0.1",
-	"description": "",
-	"keywords": [],
-	"license": "MIT",
-	"homepage": "",
-	"author": "",
-	"dependencies": {
-		"async": "^0.9.2",
-		"body-parser": "^1.18.3",
-		"colors": "^0.6.2",
-		"commander": "^1.3.2",
-		"connect-multiparty": "^2.1.1",
-		"consolidate": "^0.15.1",
-		"cookie-parser": "^1.4.3",
-		"csurf": "^1.9.0",
-		"deep-copy": "^1.4.2",
-		"express": "^4.16.3",
-		"express-admin-static": "^2.2.2",
-		"express-session": "^1.15.6",
-		"hogan.js": "^3.0.2",
-		"method-override": "^2.3.10",
-		"moment": "^2.22.2",
-		"morgan": "^1.9.0",
-		"superagent": "^5.0.1",
-		"pg": "^7.12.1",
-		"mysql": "^2.17.1",
-		"mysql-validator": "^0.1.6",
-		"pwd": "^1.1.0",
-		"serve-static": "^1.13.2",
-		"slugify": "^1.3.1",
-		"sr-pagination": "^1.0.1",
-		"xsql": "^1.0.1"
-	},
-	"devDependencies": {
-		"mocha": "^3.5.3",
-		"should": "4.3.1",
-		"supertest": "^3.1.0",
-		"recursive-fs": "^1.0.0"
-	},
-	"main": "./app",
-	"bin": {
-		"admin": "./bin/admin"
-	},
-	"scripts": {
-		"start": "node ./bin/admin"
-	}
+  "name": "alskom-admin",
+  "version": "0.0.1",
+  "description": "",
+  "keywords": [
+    
+  ],
+  "license": "MIT",
+  "homepage": "",
+  "author": "",
+  "dependencies": {
+    "async": "^0.9.2",
+    "body-parser": "^1.18.3",
+    "colors": "^0.6.2",
+    "commander": "^1.3.2",
+    "connect-multiparty": "^2.1.1",
+    "consolidate": "^0.15.1",
+    "cookie-parser": "^1.4.3",
+    "csurf": "^1.9.0",
+    "deep-copy": "^1.4.2",
+    "express": "^4.16.3",
+    "express-admin-static": "^2.2.2",
+    "express-session": "^1.15.6",
+    "hogan.js": "^3.0.2",
+    "method-override": "^2.3.10",
+    "moment": "^2.22.2",
+    "morgan": "^1.9.0",
+    "superagent": "^5.0.1",
+    "pg": "^7.12.1",
+    "mysql": "^2.17.1",
+    "mysql-validator": "^0.1.6",
+    "pwd": "^1.1.0",
+    "serve-static": "^1.13.2",
+    "slugify": "^1.3.1",
+    "sr-pagination": "^1.0.1",
+    "xsql": "^1.0.1"
+  },
+  "devDependencies": {
+    "mocha": "^3.5.3",
+    "should": "4.3.1",
+    "supertest": "^3.1.0",
+    "recursive-fs": "^1.0.0"
+  },
+  "main": "./app",
+  "bin": {
+    "admin": "./bin/admin"
+  },
+  "scripts": {
+    "start": "node ./bin/admin"
+  }
 }
