--- a/admin/config.json
+++ b/admin/config.json
@@ -1,16 +1,17 @@
 {
-    "pg": {
-        "database": "alskom",
-        "user": "postgres",
-        "password": "12345",
-        "schema": "public"
-    },
-    "server": {
-        "port": 5000
-    },
-    "app": {
-        "layouts": true,
-        "themes": true,
-        "languages": true
-    }
+	"pg": {
+		"database": "alskom",
+		"user": "postgres",
+		"password": "12345",
+		"schema": "public"
+	},
+	"server": {
+		"port": 5000
+	},
+	"app": {
+		"layouts": true,
+		"themes": true,
+		"languages": true,
+		"upload": "public/upload"
+	}
 }
