--- a/admin/config.json
+++ b/admin/config.json
@@ -2,7 +2,7 @@
 	"pg": {
 		"database": "alskom",
 		"user": "postgres",
-		"password": "12345",
+		"password": "postgres",
 		"schema": "public"
 	},
 	"server": {
